k8s/manifests-e754eb/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-e754eb
  namespace: journee
  labels:
    app: journee-e754eb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-e754eb
  template:
    metadata:
      labels:
        app: journee-e754eb
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-e754eb
          image: gcr.io/my-docker-471807/journee:e754eb-ca4f29
          ports:
            - containerPort: 3000
